# asap

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/config/: settings.yaml
app/src/: config.cpp  console_runner.cpp  console_runner.h  imgui_runner.cpp  imgui_runner.h  main.cpp  runner.h  runner_base.h
app/src/imgui/: imgui_dock.cpp
app/src/ui/: abstract_application.h  application.cpp  application.h  application_base.cpp  application_base.h  debug_ui.h
app/src/ui/log/: sink.cpp  sink.h
app/src/ui/settings/: theme.cpp
app/src/ui/style/: theme.cpp  theme.h
common/: CMakeLists.txt
common/include/common/: logging.h
common/src/: logging.cpp
common/test/: logging_test.cpp
scripts/: gen_save_load_style.py
